test/Fail/RecordPattern2.err
RecordPattern2.agda:10.6-28: error: [TooManyFields]
The record type R does not have the fields: g g'
but it would have the fields: f f'
when checking that the pattern record { g = a ; g' = a' } has type
R
